renamed loan_plan to loan_product
