# api/openapiv2/loan.swagger.json
@@ -88,7 +88,7 @@
         ]
       }
     },
-    "/api/LoanProducts/{loanPlan.productId}": {
+    "/api/LoanProducts/{loanProduct.productId}": {
       "patch": {
         "operationId": "LoanProductAPI_UpdateLoanProduct",
         "responses": {
@@ -107,7 +107,7 @@
         },
         "parameters": [
           {
-            "name": "loanPlan.productId",
+            "name": "loanProduct.productId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -451,7 +451,7 @@
     "loanCreateLoanProductRequest": {
       "type": "object",
       "properties": {
-        "loanPlan": {
+        "loanProduct": {
           "$ref": "#/definitions/loanLoanProduct"
         }
       }
@@ -482,7 +482,7 @@
     "loanListLoanProductsResponse": {
       "type": "object",
       "properties": {
-        "loanPlans": {
+        "loanProducts": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/loanLoanProduct"
@@ -688,7 +688,7 @@
     "loanUpdateLoanProductRequest": {
       "type": "object",
       "properties": {
-        "loanPlan": {
+        "loanProduct": {
           "$ref": "#/definitions/loanLoanProduct"
         }
       }
